# DataGate

./: .gitignore  CMakeLists.txt  README.md
cmake/: Dependencies.cmake  FindQt.cmake  Utils.cmake
examples/: CMakeLists.txt  main.cpp
src/: .gitignore  CMakeLists.txt  DataGateConfig.cmake.in
src/lib/: CMakeLists.txt  abstractdataclient.cpp  abstractdataclient.h  abstractdatacontroller.cpp  abstractdatacontroller.h  abstractdatamanager.cpp  abstractdatamanager.h  config.h.in  datagate.h  datamanager.cpp  datamanager.h  dataquery.cpp  dataquery.h  datarequest.cpp  datarequest.h  dataresponse.cpp  dataresponse.h  datatablemodel.cpp  datatablemodel.h  datatablemodel_p.h  debug.cpp  debug_p.h  global.h
src/lib/auth/: abstractlogincontroller.cpp  abstractlogincontroller.h  abstractloginmanager.cpp  abstractloginmanager.h  authenticator.cpp  authenticator.h  authenticator_p.h
src/lib/json/: jsondatamanager.cpp  jsondatamanager.h  jsondatamanager_p.h
src/lib/model/: tablemodel.cpp  tablemodel.h  tablemodel_p.h
src/lib/permission/: permissionmanager.cpp  permissionmanager.h
tests/: CMakeLists.txt  main.cpp
